@@ -43,6 +43,12 @@ LocalScriptBasePath[yui2]=lib/yui/2.7.0/build/
 # files does not exist, but should be fairly trivial to create.
 AppendLastModifiedTime=disabled
 
+# For spreading the load of static files to seperate domains as recomended by
+# YDN Performance Best Practices. Key should match file extension: .js | .css
+CustomHosts[]
+# Example: Serve javascript files from static sub domain (No end slash!)
+#CustomHosts[.js]=http://static.example.com
+
 
 
 [ezjscServer]
